Added a cell growing

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 [Ll]ogs/
 
 # ===================================== #
+# Layout files
+# ===================================== #
+UserSettings/Layouts/*
+
+# ===================================== #
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
 [Ee]xported[Oo]bj/
