--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # ===================================== #
 # Layout files
 # ===================================== #
-UserSettings/Layouts/*
+UserSettings/*
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
